--- a/style.css
+++ b/style.css
@@ -1,32 +1,106 @@
 body{
-    background-image: url("/image/listback.jpeg");
-    ba
+    background-image: url("https://www.imagesdoc.com/wp-content/uploads/sites/33/2019/12/AdobeStock_298012912-1024x475.jpeg");
+    width: max-content;
 }
+
 h1{
     display: flex;
-    margin: auto;
     justify-content: center;
-    margin-bottom: 25px;
 }
 
-h2{
-    display: flex;
-    margin: auto;
-    justify-content: center;
-    color: red;
-    display: flex;
-    padding: 10px;
-    background-color: black;
+.Actual_Weather{
+    width: 500px;
+    height: 250px;
+    border: 5px solid black;
+    border-radius: 15px;
+    height: 250px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 100px;
+    margin-bottom: 100px;
+    box-shadow: 10px 5px 5px yellowgreen;
+}   
+
+h3{
+    text-align: center;
+
+
+    margin-bottom: 30px; 
+}
+.forecats_1{
+    border: 5px solid black;
+    border-radius: 15px;
+    height: 250px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 20px;
+    box-shadow: 10px 5px 5px yellowgreen;
+   
+}
+
+.forecats_2{
+    border: 5px solid black;
+    border-radius: 15px;
+    height: 250px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 20px;
+    box-shadow: 10px 5px 5px yellowgreen;
 }
     
-#myInput{
-    display: flex;
-    margin: auto;
-    justify-content: center;
-}    
 
+.forecats_3{
+    border: 5px solid black;
+    border-radius: 15px;
+    height: 250px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 20px;
+    box-shadow: 10px 5px 5px yellowgreen;
+}
 
-#addtask{
+.forecats_4{
+    border: 5px solid black;
+    border-radius: 15px;
+    height: 250px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 20px;
+    box-shadow: 10px 5px 5px yellowgreen;
+}
+
+.forecats_5{
+    border: 5px solid black;
+    border-radius: 15px;
+    height: 250px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 20px;
+    box-shadow: 10px 5px 5px yellowgreen;
+}
+
+.Five_Forecats{
+    
+     width: 200px; 
+     height: 250px;
      display: flex;
-     flex: auto;
+     margin: auto;
+     justify-content: center;
+     
+     }
+
+.Weather{
+    
+}
+
+#search{
+    display: flex;
+    justify-content: center;
+
+}
+
+#Enter{
+    display: flex;
+    justify-content: center;
+
 }
